package eapli.ecourse.boardManagement.domain;

public enum State {
    ACTIVE,
    ARCHIVED
}
