package eapli.ecourse.boardUpdate.domain;

public enum BoardUpdateType {
    ARCHIVE, CREATE, COLUMN_TITLE, ROW_TITLE, BOARD_TITLE
}
