package eapli.ecourse.boardUpdate.domain;

public enum CellUpdateType {
    DELETE, INSERT, UPDATE, MOVE
}
